[package]
name = "learn-async-rust"
version = "0.1.0"
edition = "2024"

# --------------------------------------------------------------------------------------------------

[dependencies]
actix-web = "4.9.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
mio = { version = "1", features = ["net", "os-poll"] }
once_cell = "1.21"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

[profile.release]
debug = 1
